# yad2

./: .gitignore  CLAUDE.md  README.md  com.yad2.watcher.plist  config.yaml  pyproject.toml
src/yad2_watcher/: __init__.py  cli.py  fetcher.py  journal.py  notifier.py  store.py  watcher.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_journal.py  test_notifier.py  test_store.py  test_watcher.py
